# kitten

./: .env.example  .env.template  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: build-kitten-docker-image.yml  github-actions-demo.yml  run-pytest.yml
kitten/: __main__.py  api.py  app.py  config.py  logging.py
kitten/clients/: docker_client.py  luik_client.py
kitten/models/: api_models.py  docker_models.py
tests/: test_kitten.py  test_mock_docker_client.py  test_mock_luik_client.py
tests/mock_clients/: mock_docker_client.py  mock_luik_client.py
tests/mock_data/: mock_luik_queue.json
