[project]
name = "kitten"
version = "0.1.0"
description = "Kitten service that can sit behind the firewall and run tasks there"
authors = [{ name = "Soufyan Abdellati", email = "abdellatis149@gmail.com" }]
readme = "README.md"
dependencies = [
  "docker>=7.1.0,<8.0.0",
  "httpx>=0.28.1,<0.29.0",
  "fastapi>=0.120.2,<0.121.0",
  "pydantic>=2.12.3,<3.0.0",
  "pydantic-settings>=2.11.0,<3.0.0",
  "structlog>=25.5.0,<26.0.0",
  "uvicorn (>=0.38.0,<0.39.0)",
]
requires-python = ">=3.10"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
  "pytest>=8.4.2,<9.0.0",
  "types-docker>=7.1.0.20251009,<8.0.0.0",
  'colorama==0.4.6 ; sys_platform == "win32" or platform_system == "Windows"',

]
